# mozart_minus_one

./: .gitignore  ACCEPT_CRITERIA.md  AGENT.md  LICENSE  README.md  SPECS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: pipeline_flow.drawio
scripts/: export_practice_versions.py  full_pipeline.py  run_separation.py
src/mozart_minus_one/: __init__.py  cli.py  mute_piano.py  pipeline.py  separate.py  tempo.py
tests/: test_paths.py  test_pipeline.py  test_tempo.py
