[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozart-minus-one"
version = "0.1.0"
description = "Create piano-muted practice versions from source audio."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "demucs>=4.0.1",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "pyrubberband>=0.3",
    "lameenc>=1.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
mozart-minus-one = "mozart_minus_one.cli:main"
mozart-separate   = "mozart_minus_one.cli:separate_main"
mozart-export     = "mozart_minus_one.cli:export_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
